hses_fred/output/default_config/25-02-16-21-14-58/29-185-82-0/03_accept_only_distributed/rulesets/iptables/sw5-iptables-save
# Generated on Sun Feb 16 21:15:38 2025
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -A INPUT -s 192.0.0.33:192.0.0.62 -d 192.0.0.33:192.0.0.62 -p * --sport * --dport * -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.69 -p 6 --sport * --dport 80 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.69 -d 192.0.0.36 -p 6 --sport 80 --dport * -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.7 -d 192.0.0.37 -p 17 --sport * --dport 34980 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.37 -d 192.0.0.7 -p 17 --sport 34980 --dport * -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.7 -d 192.0.0.37 -p 6 --sport * --dport 80 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.37 -d 192.0.0.7 -p 6 --sport 80 --dport * -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.7 -d 192.0.0.37 -p 6 --sport * --dport 4840 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.37 -d 192.0.0.7 -p 6 --sport 4840 --dport * -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.37 -d 192.0.0.7 -p 6 --sport 0:79 --dport 22 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.37 -d 192.0.0.7 -p 6 --sport 81:4839 --dport 22 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.37 -d 192.0.0.7 -p 6 --sport 4841:65535 --dport 22 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.7 -d 192.0.0.37 -p 6 --sport 22 --dport 0:79 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.7 -d 192.0.0.37 -p 6 --sport 22 --dport 81:4839 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.7 -d 192.0.0.37 -p 6 --sport 22 --dport 4841:65535 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.37 -d 192.0.0.7 -p 17 --sport 0:34979 --dport 34980 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.37 -d 192.0.0.7 -p 17 --sport 34981:65535 --dport 34980 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.7 -d 192.0.0.37 -p 17 --sport 34980 --dport 0:34979 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.7 -d 192.0.0.37 -p 17 --sport 34980 --dport 34981:65535 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.37 -d 192.0.0.68 -p 17 --sport * --dport 34980 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.68 -d 192.0.0.37 -p 17 --sport 34980 --dport * -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.37 -d 192.0.0.5 -p 6 --sport * --dport 22 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.5 -d 192.0.0.37 -p 6 --sport 22 --dport * -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.37 -d 192.0.0.69 -p 6 --sport * --dport 443 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.69 -d 192.0.0.37 -p 6 --sport 443 --dport * -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.8 -d 192.0.0.37 -p 17 --sport * --dport 34980 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.37 -d 192.0.0.8 -p 17 --sport 34980 --dport * -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.7 -p 6 --sport * --dport 80 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.7 -d 192.0.0.36 -p 6 --sport 80 --dport * -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.7 -p 6 --sport * --dport 4840 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.7 -d 192.0.0.36 -p 6 --sport 4840 --dport * -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.37 -d 192.0.0.8 -p 6 --sport * --dport 4840 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.8 -d 192.0.0.37 -p 6 --sport 4840 --dport * -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.39 -d 192.0.0.5 -p 6 --sport * --dport 554 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.5 -d 192.0.0.39 -p 6 --sport 554 --dport * -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.8 -p 6 --sport * --dport 4840 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.8 -d 192.0.0.36 -p 6 --sport 4840 --dport * -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.7 -d 192.0.0.37 -p 6 --sport 0:21 --dport 22 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.7 -d 192.0.0.37 -p 6 --sport 23:65535 --dport 22 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.37 -d 192.0.0.7 -p 6 --sport 22 --dport 0:21 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.37 -d 192.0.0.7 -p 6 --sport 22 --dport 23:65535 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.8 -d 192.0.0.37 -p 6 --sport 0:4839 --dport 80 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.8 -d 192.0.0.37 -p 6 --sport 4841:65535 --dport 80 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.37 -d 192.0.0.8 -p 6 --sport 80 --dport 0:4839 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.37 -d 192.0.0.8 -p 6 --sport 80 --dport 4841:65535 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.5 -d 192.0.0.37 -p 6 --sport 0:21 --dport 22 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.5 -d 192.0.0.37 -p 6 --sport 23:65535 --dport 22 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.37 -d 192.0.0.5 -p 6 --sport 22 --dport 0:21 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.37 -d 192.0.0.5 -p 6 --sport 22 --dport 23:65535 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.8 -p 6 --sport * --dport 80 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.8 -d 192.0.0.36 -p 6 --sport 80 --dport * -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.37 -d 192.0.0.8 -p 6 --sport 0:79 --dport 443 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.37 -d 192.0.0.8 -p 6 --sport 81:65535 --dport 443 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.8 -d 192.0.0.37 -p 6 --sport 443 --dport 0:79 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.8 -d 192.0.0.37 -p 6 --sport 443 --dport 81:65535 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.7 -d 192.0.0.36 -p 6 --sport 0:79 --dport 4840 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.7 -d 192.0.0.36 -p 6 --sport 81:4839 --dport 4840 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.7 -d 192.0.0.36 -p 6 --sport 4841:65535 --dport 4840 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.7 -p 6 --sport 4840 --dport 0:79 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.7 -p 6 --sport 4840 --dport 81:4839 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.7 -p 6 --sport 4840 --dport 4841:65535 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.8 -d 192.0.0.36 -p 6 --sport 0:79 --dport 4840 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.8 -d 192.0.0.36 -p 6 --sport 81:4839 --dport 4840 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.8 -d 192.0.0.36 -p 6 --sport 4841:65535 --dport 4840 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.8 -p 6 --sport 4840 --dport 0:79 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.8 -p 6 --sport 4840 --dport 81:4839 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.8 -p 6 --sport 4840 --dport 4841:65535 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.8 -d 192.0.0.37 -p 6 --sport 0:442 --dport 4840 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.8 -d 192.0.0.37 -p 6 --sport 444:4839 --dport 4840 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.8 -d 192.0.0.37 -p 6 --sport 4841:65535 --dport 4840 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.37 -d 192.0.0.8 -p 6 --sport 4840 --dport 0:442 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.37 -d 192.0.0.8 -p 6 --sport 4840 --dport 444:4839 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.37 -d 192.0.0.8 -p 6 --sport 4840 --dport 4841:65535 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.39 -d 192.0.0.5 -p 6 --sport * --dport 22 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.5 -d 192.0.0.39 -p 6 --sport 22 --dport * -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.7 -d 192.0.0.36 -p 6 --sport 0:79 --dport 443 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.7 -d 192.0.0.36 -p 6 --sport 81:4839 --dport 443 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.7 -d 192.0.0.36 -p 6 --sport 4841:65535 --dport 443 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.7 -p 6 --sport 443 --dport 0:79 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.7 -p 6 --sport 443 --dport 81:4839 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.7 -p 6 --sport 443 --dport 4841:65535 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.8 -d 192.0.0.36 -p 6 --sport 0:79 --dport 443 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.8 -d 192.0.0.36 -p 6 --sport 81:4839 --dport 443 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.8 -d 192.0.0.36 -p 6 --sport 4841:65535 --dport 443 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.8 -p 6 --sport 443 --dport 0:79 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.8 -p 6 --sport 443 --dport 81:4839 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.8 -p 6 --sport 443 --dport 4841:65535 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.6 -d 192.0.0.39 -p 6 --sport * --dport 554 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.39 -d 192.0.0.6 -p 6 --sport 554 --dport * -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.7 -p 6 --sport 0:442 --dport 22 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.7 -p 6 --sport 444:4839 --dport 22 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.7 -p 6 --sport 4841:65535 --dport 22 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.7 -d 192.0.0.36 -p 6 --sport 22 --dport 0:442 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.7 -d 192.0.0.36 -p 6 --sport 22 --dport 444:4839 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.7 -d 192.0.0.36 -p 6 --sport 22 --dport 4841:65535 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.37 -d 192.0.0.7 -p 6 --sport 0:21 --dport 443 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.37 -d 192.0.0.7 -p 6 --sport 23:79 --dport 443 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.37 -d 192.0.0.7 -p 6 --sport 81:4839 --dport 443 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.37 -d 192.0.0.7 -p 6 --sport 4841:65535 --dport 443 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.7 -d 192.0.0.37 -p 6 --sport 443 --dport 0:21 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.7 -d 192.0.0.37 -p 6 --sport 443 --dport 23:79 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.7 -d 192.0.0.37 -p 6 --sport 443 --dport 81:4839 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.7 -d 192.0.0.37 -p 6 --sport 443 --dport 4841:65535 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.5 -p 6 --sport * --dport 22 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.5 -d 192.0.0.36 -p 6 --sport 22 --dport * -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.37 -d 192.0.0.7 -p 6 --sport 0:21 --dport 4840 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.37 -d 192.0.0.7 -p 6 --sport 23:79 --dport 4840 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.37 -d 192.0.0.7 -p 6 --sport 81:4839 --dport 4840 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.37 -d 192.0.0.7 -p 6 --sport 4841:65535 --dport 4840 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.7 -d 192.0.0.37 -p 6 --sport 4840 --dport 0:21 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.7 -d 192.0.0.37 -p 6 --sport 4840 --dport 23:79 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.7 -d 192.0.0.37 -p 6 --sport 4840 --dport 81:4839 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.7 -d 192.0.0.37 -p 6 --sport 4840 --dport 4841:65535 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.37 -d 192.0.0.8 -p 17 --sport 0:34979 --dport 34980 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.37 -d 192.0.0.8 -p 17 --sport 34981:65535 --dport 34980 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.8 -d 192.0.0.37 -p 17 --sport 34980 --dport 0:34979 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.8 -d 192.0.0.37 -p 17 --sport 34980 --dport 34981:65535 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.7 -d 192.0.0.36 -p 6 --sport 0:21 --dport 22 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.7 -d 192.0.0.36 -p 6 --sport 23:79 --dport 22 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.7 -d 192.0.0.36 -p 6 --sport 81:4839 --dport 22 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.7 -d 192.0.0.36 -p 6 --sport 4841:65535 --dport 22 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.7 -p 6 --sport 22 --dport 0:21 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.7 -p 6 --sport 22 --dport 23:79 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.7 -p 6 --sport 22 --dport 81:4839 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.7 -p 6 --sport 22 --dport 4841:65535 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.5 -d 192.0.0.36 -p 6 --sport 0:21 --dport 22 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.5 -d 192.0.0.36 -p 6 --sport 23:65535 --dport 22 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.5 -p 6 --sport 22 --dport 0:21 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.5 -p 6 --sport 22 --dport 23:65535 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.39 -d 192.0.0.6 -p 6 --sport 0:553 --dport 554 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.39 -d 192.0.0.6 -p 6 --sport 555:65535 --dport 554 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.6 -d 192.0.0.39 -p 6 --sport 554 --dport 0:553 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.6 -d 192.0.0.39 -p 6 --sport 554 --dport 555:65535 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.5 -d 192.0.0.39 -p 6 --sport 0:21 --dport 22 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.5 -d 192.0.0.39 -p 6 --sport 23:553 --dport 22 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.5 -d 192.0.0.39 -p 6 --sport 555:65535 --dport 22 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.39 -d 192.0.0.5 -p 6 --sport 22 --dport 0:21 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.39 -d 192.0.0.5 -p 6 --sport 22 --dport 23:553 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.39 -d 192.0.0.5 -p 6 --sport 22 --dport 555:65535 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.68 -d 192.0.0.37 -p 17 --sport 0:34979 --dport 34980 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.68 -d 192.0.0.37 -p 17 --sport 34981:65535 --dport 34980 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.37 -d 192.0.0.68 -p 17 --sport 34980 --dport 0:34979 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.37 -d 192.0.0.68 -p 17 --sport 34980 --dport 34981:65535 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.5 -d 192.0.0.39 -p 6 --sport 0:21 --dport 554 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.5 -d 192.0.0.39 -p 6 --sport 23:553 --dport 554 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.5 -d 192.0.0.39 -p 6 --sport 555:65535 --dport 554 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.39 -d 192.0.0.5 -p 6 --sport 554 --dport 0:21 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.39 -d 192.0.0.5 -p 6 --sport 554 --dport 23:553 -j ACCEPT
-A INPUT -A INPUT -s 192.0.0.39 -d 192.0.0.5 -p 6 --sport 554 --dport 555:65535 -j ACCEPT
COMMIT
# Completed on Sun Feb 16 21:15:38 2025
